manifest/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    app: test
spec:
  containers:
    - name: test-container
      image: docker.m.daocloud.io/library/busybox:latest
      command: ["/bin/sh", "-c", "sleep 365d"]
